--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
   "dependencies": {
     "joi": "^10.6.0",
     "joi-objectid": "^2.0.0",
+    "jsonwebtoken": "^8.1.0",
     "kcors": "^2.2.1",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
+    "koa-passport": "^4.0.1",
     "koa-router": "^7.2.1",
     "koa-static": "^4.0.1",
-    "mongoose": "^4.12.0"
+    "mongoose": "^4.12.0",
+    "passport-jwt": "^3.0.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "apidoc": "^0.17.6",
@@ -36,7 +40,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.3.1",
     "faker": "^3.1.0",
-    "koa-request": "^1.0.0",
+    "koa2-request": "^1.0.1",
     "mocha": "^3.5.3",
     "sinon": "^1.17.7"
   },
