--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
     "koa-passport": "^4.0.1",
+    "koa-request": "^1.0.0",
     "koa-router": "^7.2.1",
+    "koa-send": "^4.1.1",
     "koa-static": "^4.0.1",
     "mongoose": "^4.12.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
     "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0"
   },
